refactor : change return value from BiCoordsToAddr